# libserdes

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  kafka-serdes-avro-console-consumer.cpp  kafka-serdes-avro-console-producer.cpp  sample.pb-c.c  sample.pb-c.h  sample.proto  serdes-kafka-avro-client.c  serdes-kafka-pb-client.c  serdes-tool.cpp
src/: CMakeLists.txt
src-cpp/: CMakeLists.txt  Serdes.cpp
src-cpp/Avro/: serdescpp-avro.cpp  serdescpp-avro.h
src-cpp/Core/: Serdes.cpp  serdescpp.h  serdescpp_int.h
src-cpp/Protobuf/: serdescpp-protobuf.cpp  serdescpp-protobuf.hpp
src/Avro/: schema-avro.c
src/Core/: .clang-format  rest.c  schema-cache.c  serdes-common.h  serdes.c  serdes.h  serdes_int.h
src/Protobuf/: deserialize-protobuf.c  serdes-protobuf.h  serialize-protobuf.c
tests/: CMakeLists.txt  sample.pb.cc  sample.pb.h  test_kafka_proto.cpp
